[package]
name = "rzw"
version = "0.1.0"
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
description = "Rust library for controling Z-Wave networks."
homepage = "https://github.com/Roba1993"
repository = "https://github.com/Roba1993"
documentation = "https://github.com/Roba1993"
license = "MIT"
readme = "README.md"
keywords = ["Z-Wave", "controller", "Home-Control"]

[dependencies]
serial = "0.3"
mac = "0.0.2"
enum_primitive = "0.1.0"
num = "0.1.32"
