[package]
name = "rzw"
version = "0.2.0"
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
description = "Rust library for controling Z-Wave networks."
homepage = "https://github.com/Roba1993"
repository = "https://github.com/Roba1993"
documentation = "https://github.com/Roba1993"
license = "MIT"
readme = "README.md"
keywords = ["Z-Wave", "controller", "Home-Control"]
edition = '2018'

[dependencies]
serial = "0.4"
num_enum = "0.4.2"